# okta-agent-mcp-adapter

./: .env  .gitignore  ADMIN_API.md  GATEWAY_ARCHITECTURE.md  README.md  env.template  pyproject.toml  requirements.txt  test_gateway.py
config/: config.yaml  config.yaml.example
docs/: ARCHITECTURE_DIAGRAM.md  SEQUENCE_DIAGRAM.md
okta_agent_proxy/: __init__.py  config.py  main.py  metadata.py
okta_agent_proxy/admin/: __init__.py  auth.py  config_manager.py  middleware.py  routes.py
okta_agent_proxy/auth/: __init__.py  agent_authz.py  backend_auth.py  cross_app_access.py  okta_validator.py
okta_agent_proxy/backends/: __init__.py  router.py
okta_agent_proxy/cache/: __init__.py  token_cache.py
okta_agent_proxy/discovery/: __init__.py  backend_tools.py  metadata_client.py
okta_agent_proxy/middleware/: __init__.py  agent_extractor.py  auth.py  logging.py  mcp_transparent_proxy.py
okta_agent_proxy/proxy/: __init__.py  handler.py  session_manager.py
okta_agent_proxy/storage/: __init__.py  base.py  in_memory.py  models.py
scripts/: run_gateway.sh  setup_config.sh
tests/: __init__.py  conftest.py  test_agent_authz.py  test_agent_support.py  test_basic_gateway.py  test_in_memory_store.py  test_okta_auth.py
